--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf8">
-  <title>Busuu AngularJS test</title>
+  <title>AngularJS Vocab test</title>
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet/less" type="text/css" href="/less/app.less">
 </head>
@@ -38,6 +38,7 @@
     </div>
 
   </div>
+  <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
