--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,10 @@
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
   <script src="/js/app.js"></script>
-  <script src="/js/services.js"></script>
+  <script src="/js/services/words.js"></script>
+  <script src="/js/services/game.js"></script>
+  <script src="/js/services/player.js"></script>
+  <script src="/js/services/question.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/filters.js"></script>
   <script src="/js/directives.js"></script>
