--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Busuu vocabulary game</a>
+          <a class="navbar-brand" href="#">Vocabulary Game</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -47,7 +47,9 @@
   <script src="/js/services/game.js"></script>
   <script src="/js/services/player.js"></script>
   <script src="/js/services/question.js"></script>
-  <script src="/js/controllers.js"></script>
+  <script src="/js/controllers/AppCtrl.js"></script>
+  <script src="/js/controllers/GameCtrl.js"></script>
+  <script src="/js/controllers/HighscoreCtrl.js"></script>
   <script src="/js/filters.js"></script>
   <script src="/js/directives.js"></script>
 </body>
