--- a/views/partials/highscore.html
+++ b/views/partials/highscore.html
@@ -3,7 +3,7 @@
 
 <ul>
 	
-	<li ng-repeat="player in players">
+	<li ng-repeat="player in players | orderBy: 'score' : 'reverse'">
 		{{player.name}} got a score of {{player.score}}
 	</li>
 
